--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@react-native-firebase/storage": "^10.3.1",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "cheerio": "^1.0.0-rc.5",
+    "node-fetch": "^2.6.1",
+    "puppeteer": "^5.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-fbsdk": "^3.0.0",
@@ -32,7 +35,9 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "request-promise": "^4.2.6",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
