--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -222,6 +222,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-share-menu')
 }
 
 // Run this once to be able to run the application with BUCK
