--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-crop-picker": "^0.35.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-share-menu": "^5.0.3",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "save": "^2.4.0"
   },
